--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
 
   <script>
     // *** IMPORTANT: PASTE YOUR APP SCRIPT DEPLOYMENT URL HERE ***
-    const API_URL = "PASTE_YOUR_WEB_APP_URL_HERE"; 
+    const API_URL = "https://script.google.com/macros/s/AKfycbyRtDjSzUxjygsRpcKe20a0m_ytOazLh5_SWuwIfGy456UmGjtFo_4pJqk7e0M41jkKpA/exec"; 
 
     // HELPERS TO REPLACE google.script.run
     async function fetchAPI(action, params = {}) {
