--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">Created by the Training-Coordinator, the company is BON Cafe.</div>
+    <div class="footer">Created by the Training-Coordinator | BON Cafe.</div>
   </div>
 
   <datalist id="dl-names"></datalist><datalist id="dl-ids"></datalist><datalist id="dl-branches"></datalist><datalist id="dl-sups"></datalist><datalist id="dl-ams"></datalist>
