--- a/index.html
+++ b/index.html
@@ -310,8 +310,10 @@
         <h2 id="training-title">Training Day</h2>
         <form id="dynamic-form" onsubmit="handleDynamicSubmit(event, 'Training')">
           <input type="hidden" name="category" id="train-cat">
+          <!-- Manual Text Inputs as requested -->
           <div class="form-group"><label>Trainee Name</label><input type="text" name="traineeName" required placeholder="Enter Trainee Name (Manual)"></div>
           <div class="form-group"><label>Trainee ID</label><input type="text" name="traineeId" required placeholder="Enter Trainee ID (Manual)"></div>
+          <!-- Dropdown with validation -->
           <div class="form-group"><label>Trainer Name</label><input list="dl-names" name="trainerName" required placeholder="Select Trainer..."></div>
           <div id="questions-container">Loading...</div>
           <div class="form-group"><label>Notes</label><textarea name="notes" rows="3"></textarea></div>
@@ -770,16 +772,51 @@
       }
     }
 
+    // --- VALIDATION LOGIC ---
+    function validateFormInputs(form) {
+        // Find all inputs with a 'list' attribute inside this form
+        const inputs = form.querySelectorAll('input[list]');
+        for (let input of inputs) {
+            const listId = input.getAttribute('list');
+            const dataList = document.getElementById(listId);
+            // Check if datalist exists and has options (prevent blocking if API failed)
+            if (dataList && dataList.options.length > 0) {
+                // Get all valid values
+                const validValues = Array.from(dataList.options).map(opt => opt.value);
+                // Check if current value is valid
+                if (input.value && !validValues.includes(input.value)) {
+                    input.setCustomValidity("Please select a valid option from the list.");
+                    input.reportValidity(); // Shows the browser bubble
+                    
+                    // Reset validity on input change so user can fix it
+                    input.addEventListener('input', () => {
+                        input.setCustomValidity("");
+                    }, { once: true });
+                    
+                    return false; // Validation failed
+                }
+            }
+        }
+        return true; // Validation passed
+    }
+
     // --- SUBMIT ---
     async function handleDynamicSubmit(e, cat) {
       e.preventDefault();
+      // VALIDATE BEFORE SUBMITTING
+      if (!validateFormInputs(e.target)) return;
+
       const fd = new FormData(e.target);
       const obj = { category: cat };
       fd.forEach((v, k) => obj[k] = v);
       sendData(e.target, obj);
     }
+
     async function handleSubmit(e, cat) {
       e.preventDefault();
+      // VALIDATE BEFORE SUBMITTING
+      if (!validateFormInputs(e.target)) return;
+
       const fd = new FormData(e.target);
       const obj = { category: cat };
       fd.forEach((v, k) => obj[k] = v);
