--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <script>
-    const API_URL = "YOUR_SCRIPT_DEPLOYMENT_URL_HERE"; // PASTE URL HERE
+    const API_URL = "https://script.google.com/macros/s/AKfycbyRtDjSzUxjygsRpcKe20a0m_ytOazLh5_SWuwIfGy456UmGjtFo_4pJqk7e0M41jkKpA/exec"; // PASTE URL HERE
 
     let currentUser = null;
     let isAdminLogin = false;
